--- a/client/src/index.css
+++ b/client/src/index.css
@@ -133,12 +133,6 @@
   .focus\:ring-rose-gold:focus {
     --tw-ring-color: var(--rose-gold);
   }
-
-  .focus\:ring-2:focus {
-    --tw-ring-opacity: 0.5;
-    --tw-ring-offset-width: 2px;
-    box-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  }
 }
 
 @layer components {
@@ -155,13 +149,6 @@
   }
 
   .wedding-input {
-    @apply w-full px-4 py-2 border border-gray-200 rounded-lg focus:outline-none focus:border-transparent;
-  }
-
-  .wedding-input:focus {
-    --tw-ring-opacity: 0.5;
-    --tw-ring-offset-width: 2px;
-    --tw-ring-color: var(--rose-gold);
-    box-shadow: 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--rose-gold);
+    @apply w-full px-4 py-2 border border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-rose-gold focus:border-transparent;
   }
 }
